# khoj

./: Dockerfile  docker-compose.yml  gunicorn-config.py  pyproject.toml  pytest.ini
src/khoj/database/: admin.py  apps.py
src/khoj/database/adapters/: __init__.py
src/khoj/database/migrations/: 0002_googleuser.py  0004_content_types_and_more.py  0005_embeddings_corpus_id.py  0009_khojapiuser.py
src/khoj/interface/web/: base_config.html  content_source_github_input.html
src/khoj/interface/web/assets/: khoj.css
src/khoj/migrations/: migrate_offline_chat_default_model_2.py
src/khoj/processor/content/org_mode/: org_to_entries.py
src/khoj/processor/tools/: online_search.py
src/telemetry/: telemetry.py
